<resources>
    <string name="app_name">PhotoDale</string>
</resources>